# c_ppm_utils

./: CMakeLists.txt  README.md  ppm.c  ppm.h  viewer.c
pics/: test.ppm
viewer/: main.c
